# time-series-analysis

./: .gitignore  LICENSE  PROJECT_REPORT.md  README.md  pyproject.toml  requirements.txt
notebooks/: demo.ipynb
scripts/: generate_sample_data.py
src/: timeseries.py
src/time_series_library/: __init__.py  arma.py  garch.py  utils.py  var.py
src/timeseries_india/: __init__.py  data.py
src/timeseries_india/datasets/: mutual_fund_nav.csv
testing/: NIFTY-100_day.csv  NIFTY_100_sample.csv  README.md  __init__.py  demo_visualization.py  sample_data.py  test_functions.py
tests/: data.py  test_models.py
tests/datasets/: nse_prices.csv
tutorials/: 01_arma.md  01_moving_average.md  02_exponential_smoothing.md  02_garch.md  03_differencing.md  03_var.md  04_autocorrelation.md  05_decomposition.md  06_ARMA_model.ipynb  07_GARCH_model.ipynb  08_VAR_model.ipynb  09_nifty_arma_garch_var.ipynb  README.md
tutorials/examples/: autocorrelation.py  decomposition.py  differencing.py  exponential_smoothing.py  moving_average.py
